--- a/sicnav/configs/env.config
+++ b/sicnav/configs/env.config
@@ -1,13 +1,22 @@
 [env]
-time_limit = 90
+time_limit = 15
 time_step = 0.25
 val_size = 100
 test_size = 500
 randomize_attributes = true
 
+[human_trajectory_forecaster]
+prediction_model = MID
+publish_freq = 0.08
+past_num_frames = 6
+prediction_horizon = 8
+num_samples = 10
+
 [sim]
 train_val_sim = hallway_bottleneck
+# train_val_sim = hallway
 test_sim = hallway_bottleneck
+# test_sim = hallway
 starts_moving = 10
     # how many steps agents can move before robot starts moving
 square_width = 5
@@ -20,7 +29,7 @@ human_num = 3
 visible = true
 policy = orca_plus
     # can be 'orca_plus' for orca simulation or 'sfm' for sfm simulation
-radius = 0.35
+radius = 0.30
 sensor = coordinates
 safety_space = 0.01
     # setting for orca_plus policyv
@@ -49,6 +58,8 @@ policy = campc
         # (in policy.config set hum_model and priviledged_info to set the variant of CAMPC)
     # set to 'dwa' for DWA, 'orca_plus' for ORCA.
 radius = 0.25
+length = 0.5
+width = 0.5
 v_pref = 1.0
 sensor = coordinates
 debug = true
