--- a/sicnav/configs/policy.config
+++ b/sicnav/configs/policy.config
@@ -5,6 +5,9 @@ horiz = 4
 soft_constraints = true
         # soften constraints by adding penalized slack
 
+soft_dyn_consts = false
+ineq_dyn_consts = false
+
 term_const = false
         # whether to have a terminal MPC constraint
 
@@ -17,6 +20,19 @@ new_ref_each_step = false
 warmstart = true
         # whether or not to use a warmstart strategy for solving mpc
 
+# NB set up to one of these to true (either neither, cvmm or MID)
+human_goal_cvmm = true
+human_pred_MID = false
+human_pred_MID_joint = true
+human_pred_MID_vanil_as_joint = false
+human_pred_AF = false
+MID_stateful_weights = true
+
+human_goal_cvmm_horizon = 3.0
+min_hum_max_speed = 0.02
+randomize_rob_goal = true
+
+
 
 [mpc_env]
 hum_model = orca_casadi_kkt
@@ -27,6 +43,10 @@ priviledged_info = false
 
 orca_kkt_horiz = 4
         # if human model is orca_casadi_kkt, the subset of the horizon where ORCA constraints are used to model humans
+
+rob_len_buffer = 0.2
+rob_wid_buffer = 0.05
+rob_stat_buffer = 0.08
 
 human_v_max_assumption = 0.5
         # if human model is orca_casadi_kkt and priviledged_info is false, the robot assumption about human maximum speed
@@ -57,6 +77,30 @@ orca_vxy_scaling = 1e0
 orca_lambda_scaling = 1.0
         # if human model is orca_casadi_kkt, scaling variable in orca kkt constraints for better solver performance
 
+# COST PARAMS
+q_x = 1.0
+q_y = 1.0
+q_theta = 0.05
+q_v_prev = 2.5
+q_om_prev = 0.0
+r_om = 50.0
+q_v_prev_dot = 3.5
+q_om_prev_dot = 0.1
+term_q_coeff = 75.0
+term_q_theta = 2.0
+
+[humans]
+        # The ORCA parameters for the model that SICNav has of the humans. The section in env.config controls the humans in the simulator
+radius = 0.35
+sensor = coordinates
+safety_space = 0.01
+v_pref = 1.5
+max_acc = 2.0
+neighbor_dist = 10
+max_neighbors = 10
+time_horizon = 2.5
+time_horizon_obst = 1.50
+max_speed = 1.2
 
 [orca_plus]
 visible = true
