--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
-casadi==3.6.5
+casadi==3.7.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 cloudpickle==3.0.0
 contourpy==1.1.1
 cycler==0.12.1
 cython==0.29.33
+dill==0.4.0
+distinctipy==1.3.4
+easydict==1.13
+einops==0.8.1
 fonttools==4.52.1
 gym==0.21.0
 idna==3.7
@@ -12,19 +16,22 @@ importlib-metadata==4.13.0
 importlib-resources==6.4.0
 kiwisolver==1.4.5
 matplotlib==3.7.5
+ncls==0.0.68
 numpy==1.24.4
+orjson==3.10.15
 packaging==24.0
 pillow==10.3.0
 pip==21.0
 pyparsing==3.1.2
+pyyaml==6.0.2
 requests==2.32.2
 setuptools==65.5.0
 six==1.16.0
-stable-baselines3==1.7.0
-tensorboard==2.14.0
-tqdm==4.66.4
+stable-baselines3>=1.7.0
+tensorboardX==2.6.2.2
 torch==1.13.1
 torchvision==0.14.1
+tqdm==4.67.1
 urllib3==2.2.1
 wheel==0.38.0
 zipp==3.19.0
