--- a/sicnav_diffusion/JMID/MID/configs/ddim_jp_p3_bs64_lr0001_hotel.yaml
+++ b/sicnav_diffusion/JMID/MID/configs/ddim_jp_p3_bs64_lr0001_hotel.yaml
@@ -1,6 +1,6 @@
 seed: 0
 method: mid_jp # mid or cnf or mid_jp or cnf_jp
-eval_mode: True # False # True #  False # True # False # True # False  # True (evaluation) or False (training)
+eval_mode: False  # True (evaluation) or False (training)
 time: False  # time generating a single set of predictions for a single timestep on average
 fast_train: True
 maximum_history_length: 7
@@ -10,7 +10,7 @@ prediction_horizon: 12
 data_dir: processed_data  # path to directory with pkl files
 dataset: hotel  # name of the data files and model name; data used for training
 inference_dataset: hotel  # name of the data files to do inference on; "dataset" is just used to provide ground truth agent IDs when saving trajectories; inference will only be done on this dataset
-regenerate_indexes: False  # if True, data indexes are regenerated and saved in data_dir. This should be done any time the data is updated. If False, data indexes are loaded from the saved indexes
+regenerate_indexes: True  # if True, data indexes are regenerated and saved in data_dir. This should be done any time the data is updated. If False, data indexes are loaded from the saved indexes
 
 ############ Model #############
 diffnet: JointPredictionTransformerConcatLinear
@@ -34,6 +34,7 @@ eval_at: 75  # epoch to evaluate at
 eval_timesteps: 1 # number of timesteps to evaluate in a batch; automatically set to 1 if "time" is True or if "with_constraints" is true (if method is cnf); default is 10
 save_trajectories: False  # save predictions on the evaluation data
 num_steps: 2  # number of steps during evaluation (Regarding CFM, 1st step is the sample from the base distribution, so this is really "num_steps - 1" steps. Regarding MID, )
+is_eval_hst: False
 
 ############ MID Config #############
 # These parameters are only used when "method" is mid
@@ -73,5 +74,3 @@ no_edge_encoding: False
 # Data Parameters:
 device: cuda
 eval_device: None
-
-time: False  # time generating a single set of predictions for a single timestep on average
