--- a/sicnav_diffusion/JMID/MID/configs/ddim_jp_p3_bs64_lr0001_zara2.yaml
+++ b/sicnav_diffusion/JMID/MID/configs/ddim_jp_p3_bs64_lr0001_zara2.yaml
@@ -1,6 +1,6 @@
 seed: 0
 method: mid_jp # mid or cnf or mid_jp or cnf_jp
-eval_mode: True # False # True #  False # True # False # True # False  # True (evaluation) or False (training)
+eval_mode: False  # True (evaluation) or False (training)
 time: False  # time generating a single set of predictions for a single timestep on average
 fast_train: True
 maximum_history_length: 7
@@ -34,6 +34,7 @@ eval_at: 50  # epoch to evaluate at
 eval_timesteps: 1 # number of timesteps to evaluate in a batch; automatically set to 1 if "time" is True or if "with_constraints" is true (if method is cnf); default is 10
 save_trajectories: False  # save predictions on the evaluation data
 num_steps: 2  # number of steps during evaluation (Regarding CFM, 1st step is the sample from the base distribution, so this is really "num_steps - 1" steps. Regarding MID, )
+is_eval_hst: False
 
 ############ MID Config #############
 # These parameters are only used when "method" is mid
@@ -73,5 +74,3 @@ no_edge_encoding: False
 # Data Parameters:
 device: cuda
 eval_device: None
-
-time: False  # time generating a single set of predictions for a single timestep on average
