--- a/sicnav_diffusion/JMID/MID/configs/ddim_jp_sim.yaml
+++ b/sicnav_diffusion/JMID/MID/configs/ddim_jp_sim.yaml
@@ -3,17 +3,20 @@ method: mid_jp # mid or cnf or mid_jp or cnf_jp
 eval_mode: False  # True (evaluation) or False (training)
 time: False  # time generating a single set of predictions for a single timestep on average
 fast_train: False
+maximum_history_length: 5 # 6 is for HST version. 8 is for Official JRDB and ETH/UCY and so on.
+prediction_horizon: 8 # 12(included current step) or 13(not included current step)
 
 ############ Dataset #############
 data_dir: processed_data  # path to directory with pkl files
 dataset: sim  # name of the data files and model name; data used for training
 inference_dataset: sim  # name of the data files to do inference on; "dataset" is just used to provide ground truth agent IDs when saving trajectories; inference will only be done on this dataset
+regenerate_indexes: True
 
 ############ Model #############
 diffnet: JointPredictionTransformerConcatLinear
 encoder_dim: 256
 tf_layer: 3
-load_chkpt: mid_jp_0_25_multi_class_epoch30.pt
+load_chkpt: None
 
 ############ Training #############
 lr: 0.0001
@@ -31,6 +34,7 @@ eval_at: 70  # epoch to evaluate at
 eval_timesteps: 1 # number of timesteps to evaluate in a batch; automatically set to 1 if "time" is True or if "with_constraints" is true (if method is cnf); default is 10
 save_trajectories: True  # save predictions on the evaluation data
 num_steps: 2  # number of steps during evaluation (Regarding CFM, 1st step is the sample from the base distribution, so this is really "num_steps - 1" steps. Regarding MID, )
+is_eval_hst: False
 
 ############ MID Config #############
 # These parameters are only used when "method" is mid
@@ -42,6 +46,7 @@ sampling: ddim
 flow_matcher: CFM  # flow matcher to use: CFM, OTCFM (Optimal Transport CFM)
 solver: euler  # euler, dopri5, any other solver the NeuralODE class uses
 with_constraints: True
+constraint_type: opt_softplus
 visualize: True
 
 ############### Trajectron++ Config #################
@@ -69,5 +74,3 @@ no_edge_encoding: False
 # Data Parameters:
 device: cuda
 eval_device: None
-
-time: False  # time generating a single set of predictions for a single timestep on average
