--- a/sicnav_diffusion/JMID/MID/configs/ddim_p3_bs256_lr001_jrdb_bev_0_4_multi_class_clean.yaml
+++ b/sicnav_diffusion/JMID/MID/configs/ddim_p3_bs256_lr001_jrdb_bev_0_4_multi_class_clean.yaml
@@ -34,6 +34,7 @@ eval_at: 70  # epoch to evaluate at
 eval_timesteps: 1 # number of timesteps to evaluate in a batch; automatically set to 1 if "time" is True;  Must be 1 if "with_constraints" is True. Default is 10 XXX: To fix
 save_trajectories: False  # save predictions on the evaluation data
 num_steps: 2  # number of steps during evaluation (Regarding CFM, 1st step is the sample from the base distribution, so this is really "num_steps - 1" steps. Regarding MID, )
+is_eval_hst: False
 
 ############ MID Config #############
 # These parameters are only used when "method" is mid
