--- a/sicnav_diffusion/JMID/MID/configs/ddim_p3_bs256_lr001_zara1.yaml
+++ b/sicnav_diffusion/JMID/MID/configs/ddim_p3_bs256_lr001_zara1.yaml
@@ -1,6 +1,6 @@
 seed: 0
 method: mid  # mid or cnf XXX: fix model loading
-eval_mode: True  # True (evaluation) or False (training)
+eval_mode: False  # True (evaluation) or False (training)
 fast_train: True  # Skip evaluating most-likely trajectories and KDE during training
 time: False  # time generating a single set of predictions for a single timestep on average
 maximum_history_length: 7 # 6 is for HST version. 8 is for Official JRDB and ETH/UCY and so on.
@@ -34,6 +34,7 @@ eval_at: 365  # epoch to evaluate at
 eval_timesteps: 1 # number of timesteps to evaluate in a batch; automatically set to 1 if "time" is True;  Must be 1 if "with_constraints" is True. Default is 10 XXX: To fix
 save_trajectories: False  # save predictions on the evaluation data
 num_steps: 2  # number of steps during evaluation (Regarding CFM, 1st step is the sample from the base distribution, so this is really "num_steps - 1" steps. Regarding MID, )
+is_eval_hst: False
 
 ############ MID Config #############
 # These parameters are only used when "method" is mid
@@ -45,6 +46,7 @@ sampling: ddim
 flow_matcher: CFM  # flow matcher to use: CFM, OTCFM (Optimal Transport CFM)
 solver: euler  # euler, dopri5, any other solver the NeuralODE class uses
 with_constraints: True
+constraint_type: opt_softplus
 visualize: True
 
 ############### Trajectron++ Config #################
